added some content

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <script src="./main.js"></script>
 
 </head>
+
 <body>
     <header>
         <div class="logo"><img src="./images/logo-01.svg" alt="logo"></div>
@@ -54,17 +56,123 @@
                 <li><a href="#">contact me</a></li>
             </ul>
         </aside>
-        <div class="main-content">
 
-        </div>
+
+        <section class="main-content">
+            <div class="details">
+                <h1>Shashi Kumar D M</h1>
+                <p>Pasenate about web Development, Photography and Designing</p>
+
+                <div class="current-edu">
+                    <p>Currently perceiving my Engineering Degree at Acharya Institutes of Technology in the Domain
+                        Information Science and Engineering</p>
+                </div>
+            </div>
+
+            <section>
+                <h1>Education</h1>
+                <article>
+                    <h1>10<sup>th</sup> Standard</h1>
+                    <div>
+                        <h4>Institute: </h4>
+                        <p>Saint Theresa Primary and High School</p>
+                    </div>
+                    <div>
+                        <h4>Marks: </h4>
+                        <p>80%</p>
+                    </div>
+                </article>
+                <article>
+                    <h1>Pre University</h1>
+                    <div>
+                        <h4>Institute: </h4>
+                        <p>Acharya Pre-University College</p>
+                    </div>
+                    <div>
+                        <h4>Marks: </h4>
+                        <p>78%</p>
+                    </div>
+                </article>
+                <article>
+                    <h1>Bachuler of Engineering</h1>
+                    <div>
+                        <h4>Institute: </h4>
+                        <p>Acharya Institute of Technology</p>
+                    </div>
+                    <div>
+                        <h4>Domain: </h4>
+                        <p>Information Science and Engineering</p>
+                    </div>
+                    <div>
+                        <h4>Marks: </h4>
+                        <p>8.4 CGPA (6th Sem)</p>
+                    </div>
+                </article>
+            </section>
+
+            <section>
+                <h1>Skills</h1>
+                <article>
+                    <h1>Non Technical Skills</h1>
+                    <ul>
+                        <li>Creative</li>
+                        <li>Adaptive</li>
+                        <li>Self Learning</li>
+                        <li>Attention to detail</li>
+                        <li>Time Management</li>
+                        <li>Problem Solving</li>
+                    </ul>
+                </article>
+                <article>
+                    <h1>Technocal Skills</h1>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JAVASCRIPT</li>
+                        <li>PHP</li>
+                        <li>DBMS</li>
+                        <li>JAVA</li>
+                        <li>PYTHON</li>
+                        <li>GIT</li>
+                    </ul>
+                </article>
+            </section>
+
+            <section>
+                <h1>Works</h1>
+                <article>
+                    <h1>Projects</h1>
+                    <article>
+                        <h1>Invoice Management System</h1>
+                        <div>
+                            <p>It was a <b> DBMS </b> project used to store the product details, customers details and also generate invoices and estimates</p><br>
+                            <p>Languates used: HTML, CSS, JS, DBMS, PHP</p>
+                        </div>
+                    </article>
+                    <article>
+                        <h1>Notes Repository</h1>
+                        <div>
+                            <p>It was a <b> File Structures </b> project which helps in distribution of Notes to all the students</p><br>
+                            <p>Languates used: HTML, CSS, JS, JSON, PHP</p>
+                        </div>
+                    </article>
+                </article>
+            </section>
+
+            
+
+        </section>
+
+
         <aside class="right">
-            <marquee behavior="scroll" direction="up" id="maq" >
-                    <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Starting an internship in sparks foundation</h5>
-                    <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Making Web technology mini project</h5>
-                    <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Co-cubes is in the next week</h5>
-                    <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Wana work as a developer</h5>
+            <marquee behavior="scroll" direction="up" id="maq">
+                <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Starting an internship in sparks foundation</h5>
+                <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Making Web technology mini project</h5>
+                <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Co-cubes is in the next week</h5>
+                <h5 onmouseover="maq.stop()" onmouseout="maq.start()">Wana work as a developer</h5>
             </marquee>
         </aside>
     </main>
 </body>
+
 </html>
