--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -288,6 +288,16 @@
             </aside>
         </main>
 
+        <footer>
+            <p>&copy; Shashi | Ravi 2020</p>
+            <div class="icons">
+                <a href="#"><img src="./icons/insta.png" alt=""></a>
+                <a href="#"><img src="./icons/fb.png" alt=""></a>
+                <a href="#"><img src="./icons/twiter.png" alt=""></a>
+                <a href="#"><img src="./icons/whatsapp.png" alt=""></a>
+            </div>
+        </footer>
+
         <!-- javascripts -->
         <script defer>
 
